--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "storage-prototype",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "example.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node example.js"
   },
   "author": "Scott Lowe <scott@entercastle.com> (http://scottdlowe.com)",
   "license": "ISC"
